--- a/app/src/main/res/menu/player.xml
+++ b/app/src/main/res/menu/player.xml
@@ -1,8 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".PlayerActivity" >
+    <item android:id="@+id/action_search"
+        android:title="Search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="1"
+        android:showAsAction="always" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:orderInCategory="2"
+        android:showAsAction="always" />
+    <item android:id="@+id/action_about"
+        android:title="About"
+        android:orderInCategory="3"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_exit"
+        android:title="Exit"
+        android:orderInCategory="4"
         android:showAsAction="never" />
 </menu>
