--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -63,19 +63,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/bPrev"
-            android:background="@android:drawable/ic_media_previous"/>
+            android:background="@drawable/custom_previous"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:drawable/ic_media_play"
+            android:background="@drawable/custom_play"
             android:id="@+id/bPlay" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/bNext"
-            android:background="@android:drawable/ic_media_next" />
+            android:background="@drawable/custom_next" />
 
         <ToggleButton
             android:layout_width="wrap_content"
