--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -7,11 +7,12 @@
     android:weightSum="1">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
         android:id="@+id/imageView"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/splash"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,22 +25,40 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.0.1alpha"
+        android:text="0.0.1 alpha"
         android:id="@+id/tvAboutVersion"
+        android:layout_gravity="center_horizontal" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:id="@+id/viewStub"
+        android:background="#ffffffff"
         android:layout_gravity="center_horizontal" />
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:id="@+id/scrollView"
-        android:layout_weight="0.60">
+        android:layout_weight=".8">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus neque nulla, accumsan nec porta vitae, mattis nec velit. Suspendisse ultricies dui et fermentum sollicitudin. Donec blandit fermentum nisi, eu pharetra quam tincidunt vel. Morbi tincidunt sem neque, ac semper metus lobortis vitae. Phasellus bibendum lectus eget massa venenatis, et tristique velit eleifend. Nam at vulputate purus, quis blandit diam. Nam id blandit magna, non tincidunt ante. Donec arcu libero, elementum id diam cursus, interdum aliquet augue. Mauris congue iaculis lacus, id posuere libero suscipit vitae. Ut pharetra felis nunc, at luctus risus efficitur et. " />
+            android:text="A simple music player app for audio enthusiasts."
+            android:id="@+id/tvAboutDesc" />
     </ScrollView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:id="@+id/viewStub2"
+        android:layout_margin="5dp"
+        android:background="#ffffffff"
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
