--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -50,41 +50,43 @@
         android:gravity="center">
 
         <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/custom_shuffle"
             android:text=""
             android:textOff=""
             android:textOn=""
             android:id="@+id/tbShuf"
-            android:checked="false" />
+            android:checked="false"
+            android:layout_marginRight="30dp" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/bPrev"
             android:background="@drawable/custom_previous"/>
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:background="@drawable/custom_play"
             android:id="@+id/bPlay" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/bNext"
             android:background="@drawable/custom_next" />
 
         <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/custom_repeat"
             android:text=""
             android:textOff=""
             android:textOn=""
-            android:id="@+id/tbRep" />
+            android:id="@+id/tbRep"
+            android:layout_marginLeft="30dp" />
     </LinearLayout>
 
 </LinearLayout>
