--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -1,67 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="0px"
+    android:layout_weight="30"
     android:background="#ff000000"
     android:gravity="top"
-    android:layout_weight="30">
+    android:orientation="horizontal">
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="5dp"
         android:id="@+id/bBrowse"
-        android:background="@drawable/custom_store"
-        android:layout_alignBaseline="@+id/tvAlbum"
-        android:layout_alignBottom="@+id/tvAlbum"
-        android:layout_alignParentLeft="true"/>
-
-    <Button
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/bVolume"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/custom_volume"
         android:layout_alignBaseline="@+id/tvAlbum"
         android:layout_alignBottom="@+id/tvAlbum"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/custom_store" />
+
+    <Button
+        android:id="@+id/bVolume"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:layout_alignBaseline="@+id/tvAlbum"
+        android:layout_alignBottom="@+id/tvAlbum"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/custom_volume" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Now Playing"
-        android:layout_marginTop="5dp"
         android:id="@+id/tvSongTitle"
-        android:textColor="#ffffffff"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Album"
-        android:id="@+id/tvAlbum"
-        android:layout_below="@+id/tvSongTitle"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="Now Playing"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ffffffff" />
 
     <TextView
+        android:id="@+id/tvAlbum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="John Doe"
+        android:layout_below="@+id/tvSongTitle"
+        android:layout_centerHorizontal="true"
+        android:text="New Album"
+        android:textColor="#ffffffff" />
+
+    <TextView
         android:id="@+id/tvArtist"
-        android:textColor="#ffffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/tvAlbum"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="John Doe"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#ffffffff" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#ffffffff"
         android:layout_below="@+id/tvArtist"
+        android:background="#ffffffff"
         ></View>
 
 </RelativeLayout>
