--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash"
     android:gravity="bottom">
@@ -13,12 +14,20 @@
         android:text="Now Loading..."
         android:id="@+id/tvLoading"
         android:layout_gravity="center_horizontal"
-        android:textColor="#fff5f7ff" />
+        android:textColor="#ffffffff" />
 
     <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pbLoading"
-        android:indeterminate="false" />
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvFound"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ffffffff" />
+
 </LinearLayout>
