--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -12,8 +12,8 @@
         android:id="@+id/bBrowse"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignBaseline="@+id/tvAlbum"
-        android:layout_alignBottom="@+id/tvAlbum"
+        android:layout_alignBaseline="@+id/tvAlbum_TitleFrag"
+        android:layout_alignBottom="@+id/tvAlbum_TitleFrag"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="5dp"
         android:background="@drawable/custom_store" />
@@ -22,46 +22,44 @@
         android:id="@+id/bVolume"
         android:layout_width="40dp"
         android:layout_height="35dp"
-        android:layout_alignBaseline="@+id/tvAlbum"
-        android:layout_alignBottom="@+id/tvAlbum"
+        android:layout_alignBaseline="@+id/tvAlbum_TitleFrag"
+        android:layout_alignBottom="@+id/tvAlbum_TitleFrag"
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
         android:background="@drawable/custom_volume" />
 
     <TextView
-        android:id="@+id/tvSongTitle"
+        android:id="@+id/tvSongTitle_TitleFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
-        android:text="Now Playing"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#ffffffff" />
 
     <TextView
-        android:id="@+id/tvAlbum"
+        android:id="@+id/tvAlbum_TitleFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvSongTitle"
+        android:layout_below="@+id/tvSongTitle_TitleFrag"
         android:layout_centerHorizontal="true"
-        android:text="New Album"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#ffffffff" />
 
     <TextView
-        android:id="@+id/tvArtist"
+        android:id="@+id/tvArtist_TitleFrag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvAlbum"
+        android:layout_below="@+id/tvAlbum_TitleFrag"
         android:layout_centerHorizontal="true"
-        android:text="John Doe"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#ffffffff" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_below="@+id/tvArtist"
+        android:layout_below="@+id/tvArtist_TitleFrag"
         android:background="#ffffffff"
         ></View>
 
