--- a/app/src/main/res/layout/fragment_mini_player.xml
+++ b/app/src/main/res/layout/fragment_mini_player.xml
@@ -4,16 +4,23 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="0px"
-    android:layout_weight="20"
-    android:background="#ff000000"
+    android:layout_weight="15"
+    android:background="@drawable/custom_mini_player"
     android:clickable="true"
     android:id="@+id/rlPlayer"
     android:gravity="bottom">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:lines="1"
+        android:singleLine="true"
+        android:fadingEdge="horizontal"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/tvSongTitle_MiniPlayerFrag"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -21,23 +28,31 @@
         android:textColor="#ffffffff" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginLeft="10dp"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:lines="1"
+        android:singleLine="true"
+        android:fadingEdge="horizontal"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:textAppearance="?android:attr/textAppearanceSmall"
         android:id="@+id/tvArtist_MiniPlayerFrag"
         android:layout_below="@+id/tvSongTitle_MiniPlayerFrag"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#ffffffff" />
 
-    <ImageButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/bPlay"
+        android:layout_marginTop="5dp"
+        android:id="@+id/bPlay_MiniPlayerFrag"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        style="@android:style/MediaButton.Play"
+        android:background="@android:drawable/ic_media_play"
         android:layout_alignBottom="@+id/tvArtist_MiniPlayerFrag" />
 
     <View
