--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,4 +1,128 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="0px"
+    android:layout_weight="30"
+    android:background="#ff000000"
+    android:gravity="top"
+    android:orientation="horizontal">
+
+    <Button
+        android:id="@+id/bBrowse"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignBaseline="@+id/tvAlbum_TitleFrag"
+        android:layout_alignBottom="@+id/tvAlbum_TitleFrag"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/custom_store" />
+
+    <Button
+        android:id="@+id/bVolume"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:layout_alignBaseline="@+id/tvAlbum_TitleFrag"
+        android:layout_alignBottom="@+id/tvAlbum_TitleFrag"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/custom_volume" />
+
+    <TextView
+        android:id="@+id/tvSongTitle_TitleFrag"
+        android:gravity="center"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:lines="1"
+        android:singleLine="true"
+        android:fadingEdge="horizontal"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#ffffffff" />
+
+    <TextView
+        android:id="@+id/tvAlbum_TitleFrag"
+        android:gravity="center"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:lines="1"
+        android:singleLine="true"
+        android:fadingEdge="horizontal"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:layout_below="@+id/tvSongTitle_TitleFrag"
+        android:layout_centerHorizontal="true"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#ffffffff" />
+
+    <TextView
+        android:id="@+id/tvArtist_TitleFrag"
+        android:gravity="center"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:scrollHorizontally="true"
+        android:lines="1"
+        android:singleLine="true"
+        android:fadingEdge="horizontal"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:layout_below="@+id/tvAlbum_TitleFrag"
+        android:layout_centerHorizontal="true"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#ffffffff" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/tvArtist_TitleFrag"
+        android:background="#ffffffff"
+        ></View>
+
+</RelativeLayout>
+
+<RelativeLayout
+android:layout_width="match_parent"
+android:layout_height="0px"
+android:layout_weight="130"
+android:background="#ff000000"
+android:orientation="vertical">
+
+<ImageView
+    android:id="@+id/ivAlbumArt"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginLeft="0dp"
+    android:contentDescription="Album Art"
+    android:scaleType="fitXY"
+    android:src="@drawable/splash" />
+
+<RatingBar
+    android:id="@+id/rbRating"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="10dp"
+    android:numStars="5"
+    android:scaleX="0.5"
+    android:scaleY="0.5"
+    android:stepSize="1" />
+<!--style="@style/myRatingBar"-->
+</RelativeLayout>
+
+<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="0px"
     android:layout_weight="40"
@@ -88,4 +212,5 @@
             android:textOn="" />
     </LinearLayout>
 
+</LinearLayout>
 </LinearLayout>
