--- a/app/src/main/res/layout/fragment_mini_player.xml
+++ b/app/src/main/res/layout/fragment_mini_player.xml
@@ -45,7 +45,7 @@
         android:textColor="#ffffffff" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:id="@+id/bPlay_MiniPlayerFrag"
