--- a/app/src/main/res/layout/fragment_songlist.xml
+++ b/app/src/main/res/layout/fragment_songlist.xml
@@ -11,5 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/lvSongs"
+        android:scrollingCache="false"
+        android:animationCache="false"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
