--- a/app/src/main/res/layout/list_item_song.xml
+++ b/app/src/main/res/layout/list_item_song.xml
@@ -1,7 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<LinearLayout
+    android:layout_height="60dp"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:textColor="#ffffffff"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tvSongTitle"></TextView>
+    android:orientation="horizontal"
+    android:background="@drawable/custom_list_item"
+    android:weightSum="100"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageView
+        android:layout_width="0px"
+        android:layout_marginLeft="2dp"
+        android:layout_weight="10"
+        android:layout_height="match_parent"
+        android:src="@drawable/song_icon"
+        android:id="@+id/ivListItem"
+        android:gravity="center_vertical" />
+
+    <LinearLayout
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_width="0px"
+        android:layout_weight="70"
+        android:layout_height="40dp">
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_marginLeft="3dp"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffffff"
+            android:cacheColorHint="#00000000"
+            android:fadingEdge="horizontal"
+            android:lines="1"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Song Title"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/tvSongTitle_ListItem" />
+
+        <TextView
+            android:layout_width="250dp"
+            android:layout_marginLeft="3dp"
+            android:cacheColorHint="#00000000"
+            android:lines="1"
+            android:singleLine="true"
+            android:fadingEdge="horizontal"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="#ffffffff"
+            android:text="Artist"
+            android:id="@+id/tvArtist_ListItem" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="0px"
+        android:gravity="center_vertical|right"
+        android:cacheColorHint="#00000000"
+        android:textColor="#ffffffff"
+        android:layout_height="match_parent"
+        android:layout_weight="20"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="00:00"
+        android:layout_marginRight="2dp"
+        android:id="@+id/tvDuration" />
+
+</LinearLayout>
