--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Now Loading..."
+        android:text="Looking for songs..."
         android:id="@+id/tvLoading"
         android:layout_gravity="center_horizontal"
         android:textColor="#ffffffff" />
