--- a/app/src/main/res/menu/player.xml
+++ b/app/src/main/res/menu/player.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/action_search"
         android:title="Search"
-        android:icon="@drawable/search"
+        android:icon="@android:drawable/ic_search_category_default"
         android:orderInCategory="1"
         android:showAsAction="collapseActionView|ifRoom"
         android:actionViewClass="android.widget.SearchView" />
