Added SectionIndexer to show Alphabet Overlay; Translucent Dividers between list items; Update SongList on change of playing song; Ellipsize list item text to truncate long strings.

--- a/app/src/main/res/layout/fragment_songlist.xml
+++ b/app/src/main/res/layout/fragment_songlist.xml
@@ -8,6 +8,7 @@
     android:background="#ff000000">
 
     <ListView
+        android:fastScrollEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/lvSongs"
