--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="72dp"
         android:layout_height="72dp"
-        android:id="@+id/imageView"
+        android:id="@+id/ivAppIcon"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/splash"
         android:scaleType="centerCrop" />
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="audiophile"
+        android:text="@string/app_name"
         android:gravity="center"
         android:layout_gravity="center_horizontal" />
 
