--- a/app/src/main/res/layout/list_item_song.xml
+++ b/app/src/main/res/layout/list_item_song.xml
@@ -1,66 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_height="60dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:background="@drawable/custom_list_item"
-    android:weightSum="100"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="60dp"
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="0px"
-        android:layout_marginLeft="2dp"
-        android:layout_weight="10"
-        android:layout_height="match_parent"
-        android:src="@drawable/song_icon"
-        android:id="@+id/ivListItem"
-        android:gravity="center_vertical" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="#779c9c9c"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 
     <LinearLayout
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical"
-        android:layout_width="0px"
-        android:layout_weight="70"
-        android:layout_height="40dp">
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/custom_list_item"
+        android:orientation="horizontal"
+        android:paddingRight="20dp"
+        android:weightSum="100">
+
+        <ImageView
+            android:id="@+id/ivListItem"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="2dp"
+            android:layout_weight="10"
+            android:gravity="center_vertical"
+            android:src="@drawable/song_icon" />
+
+        <LinearLayout
+            android:layout_width="0px"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="77"
+            android:orientation="vertical">
+
+            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/tvSongTitle_ListItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:cacheColorHint="#00000000"
+                android:ellipsize="end"
+                android:fadingEdge="horizontal"
+                android:lines="1"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="Song Title"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#ffffffff" />
+
+            <TextView
+                android:id="@+id/tvArtist_ListItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:cacheColorHint="#00000000"
+                android:ellipsize="end"
+                android:fadingEdge="horizontal"
+                android:lines="1"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="Artist"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#ffffffff" />
+        </LinearLayout>
 
         <TextView
-            android:layout_width="250dp"
-            android:layout_marginLeft="3dp"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffffff"
+            android:id="@+id/tvDuration"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_marginRight="2dp"
+            android:layout_weight="13"
             android:cacheColorHint="#00000000"
-            android:fadingEdge="horizontal"
-            android:lines="1"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Song Title"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/tvSongTitle_ListItem" />
-
-        <TextView
-            android:layout_width="250dp"
-            android:layout_marginLeft="3dp"
-            android:cacheColorHint="#00000000"
-            android:lines="1"
-            android:singleLine="true"
-            android:fadingEdge="horizontal"
-            android:layout_height="wrap_content"
+            android:gravity="center_vertical|right"
+            android:text="00:00"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#ffffffff"
-            android:text="Artist"
-            android:id="@+id/tvArtist_ListItem" />
+            android:textColor="#ffffffff" />
+
     </LinearLayout>
 
-    <TextView
-        android:layout_width="0px"
-        android:gravity="center_vertical|right"
-        android:cacheColorHint="#00000000"
-        android:textColor="#ffffffff"
-        android:layout_height="match_parent"
-        android:layout_weight="20"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="00:00"
-        android:layout_marginRight="2dp"
-        android:id="@+id/tvDuration" />
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="#779c9c9c"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
 </LinearLayout>
