--- a/app/src/main/res/layout/fragment_mini_player.xml
+++ b/app/src/main/res/layout/fragment_mini_player.xml
@@ -1,69 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="0dp"
     android:layout_width="match_parent"
-    android:layout_height="0px"
-    android:layout_weight="20"
-    android:background="@drawable/custom_mini_player"
-    android:clickable="true"
-    android:id="@+id/rlPlayer"
-    android:gravity="top">
-
-    <TextView
-        android:layout_width="260dp"
-        android:layout_marginLeft="10dp"
-        android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:scrollHorizontally="true"
-        android:lines="1"
-        android:text="Song Title"
-        android:singleLine="true"
-        android:fadingEdge="horizontal"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/tvSongTitle_MiniPlayerFrag"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#ffffffff"
-        android:gravity="center_vertical"
-        android:layout_marginTop="5dp" />
-
-    <TextView
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:ellipsize="marquee"
-        android:text="Song Artist"
-        android:scrollHorizontally="true"
-        android:lines="1"
-        android:singleLine="true"
-        android:fadingEdge="horizontal"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/tvArtist_MiniPlayerFrag"
-        android:layout_below="@+id/tvSongTitle_MiniPlayerFrag"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#ffffffff" />
-
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:id="@+id/bPlay_MiniPlayerFrag"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:background="@android:drawable/ic_media_play"
-        android:layout_alignBottom="@+id/tvArtist_MiniPlayerFrag" />
+    android:orientation="vertical"
+    android:gravity="top"
+    android:layout_weight="20">
 
     <View
-        android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#ffffffff"
-        android:layout_above="@+id/tvSongTitle_MiniPlayerFrag"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
-</RelativeLayout>
+        android:layout_width="match_parent"
+        android:background="@android:color/white" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="100"
+        android:background="@android:color/black">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="85"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@drawable/custom_mini_player"
+            android:clickable="true"
+            android:id="@+id/rlPlayer"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="marquee"
+                android:scrollHorizontally="true"
+                android:lines="1"
+                android:text="Song Title"
+                android:singleLine="true"
+                android:fadingEdge="horizontal"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/tvSongTitle_MiniPlayerFrag"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ffffffff"
+                android:gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:ellipsize="marquee"
+                android:text="Song Artist"
+                android:scrollHorizontally="true"
+                android:lines="1"
+                android:singleLine="true"
+                android:fadingEdge="horizontal"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/tvArtist_MiniPlayerFrag"
+                android:layout_below="@+id/tvSongTitle_MiniPlayerFrag"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="#ffffffff" />
+        </RelativeLayout>
+
+        <Button
+            android:layout_gravity="center"
+            android:layout_weight="15"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/bPlay_MiniPlayerFrag"
+            android:background="@android:drawable/ic_media_play" />
+    </LinearLayout>
+</LinearLayout>
